--- a/index.html
+++ b/index.html
@@ -1,86 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dreampal.com – Premium Domain for Sale</title>
-<style>
-    body {
-        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        background: linear-gradient(135deg, #f4f8ff, #e8f0ff);
-        margin: 0;
-        padding: 0;
-        color: #333;
-        text-align: center;
-    }
-    .container {
-        max-width: 700px;
-        margin: auto;
-        padding: 40px 20px;
-    }
-    h1 {
-        font-size: 2.8em;
-        margin-bottom: 0.3em;
-        color: #2b3d63;
-    }
-    h2 {
-        font-size: 1.4em;
-        margin-bottom: 1em;
-        color: #5c6b88;
-    }
-    .price {
-        font-size: 1.8em;
-        color: #2b3d63;
-        margin: 20px 0;
-    }
-    p {
-        font-size: 1.1em;
-        line-height: 1.6;
-        margin-bottom: 1em;
-    }
-    .cta {
-        display: inline-block;
-        background: #2b3d63;
-        color: white;
-        padding: 15px 30px;
-        font-size: 1.1em;
-        text-decoration: none;
-        border-radius: 6px;
-        margin-top: 20px;
-        transition: background 0.3s ease;
-    }
-    .cta:hover {
-        background: #1f2b45;
-    }
-    .examples {
-        background: #ffffffdd;
-        padding: 20px;
-        border-radius: 8px;
-        margin-top: 30px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dreampal.com - Domain For Sale</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<div class="container">
-    <h1>Dreampal.com</h1>
-    <h2>Your Brand’s New Best Friend</h2>
-    <div class="price">?? Asking Price: $9,800 USD</div>
-    <p>
-        Dreampal.com is short, memorable, and instantly brandable. Perfect for startups, lifestyle brands, 
-        social platforms, travel services, mental wellness apps, or e-commerce ventures. 
-        Own the name that inspires trust, warmth, and ambition.
-    </p>
-    <a class="cta" href="https://dan.com/buy-domain/dreampal.com" target="_blank">Buy Now Securely</a>
-
-    <div class="examples">
-        <h3>Imagine the Possibilities</h3>
-        <p>?? Travel platform connecting dream destinations with friendly local guides.</p>
-        <p>?? Mental wellness app offering friendly AI coaching for life goals.</p>
-        <p>?? Social gifting marketplace connecting people through personalized experiences.</p>
+    <div class="container">
+        <h1>dreampal.com</h1>
+        <h2>Premium Domain For Sale</h2>
+        <p class="pitch">
+            Unlock the potential of <strong>dreampal.com</strong> — a short, memorable, and highly brandable name.
+            Perfect for startups, apps, AI platforms, social networks, travel, wellness, or lifestyle brands.
+        </p>
+        <ul class="benefits">
+            <li>✔ Easy to remember, global appeal</li>
+            <li>✔ Strong keyword: "dream" & "pal"</li>
+            <li>✔ Ideal for branding and marketing</li>
+            <li>✔ Rare, one-word brandable .com</li>
+        </ul>
+        <a class="buy-button" href="https://www.afternic.com/domain/dreampal.com" target="_blank">
+            Buy Now on Afternic
+        </a>
+        <p class="note">Secure transaction handled by Afternic (GoDaddy), ensuring safe payment and transfer.</p>
     </div>
-</div>
-
 </body>
 </html>
