--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dreampal.com - Domain For Sale</title>
+    <title>dreampal.com – AI Companion Platform</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <div class="container">
         <h1>dreampal.com</h1>
-        <h2>Premium Domain For Sale</h2>
+        <h2>Premium Domain for AI Companions</h2>
         <p class="pitch">
-            Unlock the potential of <strong>dreampal.com</strong> — a short, memorable, and highly brandable name.
-            Perfect for startups, apps, AI platforms, social networks, travel, wellness, or lifestyle brands.
+            Unlock the future of digital companionship with <strong>dreampal.com</strong>.  
+            Perfect for AI chatbots, lifelike digital avatars, and platforms that simulate friendship, empathy, and connection.  
+            Short, memorable, and highly brandable — ideal for startups building the next generation of AI companions.
         </p>
         <ul class="benefits">
-            <li>✔ Easy to remember, global appeal</li>
-            <li>✔ Strong keyword: "dream" & "pal"</li>
-            <li>✔ Ideal for branding and marketing</li>
-            <li>✔ Rare, one-word brandable .com</li>
+            <li>? Perfect for AI, chatbots, and digital avatars</li>
+            <li>? Short, catchy, and brandable</li>
+            <li>? Evokes friendship, trust, and human connection</li>
+            <li>? Rare, premium .com — ideal for branding and marketing</li>
         </ul>
         <a class="buy-button" href="https://www.afternic.com/domain/dreampal.com" target="_blank">
             Buy Now on Afternic
         </a>
-        <p class="note">Secure transaction handled by Afternic (GoDaddy), ensuring safe payment and transfer.</p>
+        <p class="note">
+            Secure transaction handled via Afternic (GoDaddy network) — safe payment and transfer guaranteed.
+        </p>
     </div>
 </body>
 </html>
+
