--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
-dreampal.com
-Premium Domain for AI Companions
-Unlock the future of digital companionship with dreampal.com. Perfect for AI chatbots, lifelike digital avatars, and platforms that simulate friendship, empathy, and connection. Short, memorable, and highly brandable — ideal for startups building the next generation of AI companions. 
-•	✔ Perfect for AI, chatbots, and digital avatars
-•	✔ Short, catchy, and brandable
-•	✔ Evokes friendship, trust, and human connection
-•	✔ Rare, premium .com — ideal for branding and marketing
-Buy Now on Afternic 
-Secure transaction handled via Afternic (GoDaddy network) — safe payment and transfer guaranteed. 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dreampal.com – AI Companion Platform</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+</head>
+<body>
+    <div class="container">
+        <h1>dreampal.com</h1>
+        <h2>Premium Domain for AI Companions</h2>
+        <p class="pitch">
+            Unlock the future of digital companionship with <strong>dreampal.com</strong>.  
+            Perfect for AI chatbots, lifelike digital avatars, and platforms that simulate friendship, empathy, and connection.  
+            Short, memorable, and highly brandable — ideal for startups building the next generation of AI companions.
+        </p>
+        <ul class="benefits">
+            <li>✔ Perfect for AI, chatbots, and digital avatars</li>
+            <li>✔ Short, catchy, and brandable</li>
+            <li>✔ Evokes friendship, trust, and human connection</li>
+            <li>✔ Rare, premium .com — ideal for branding and marketing</li>
+        </ul>
+        <a class="buy-button" href="https://www.afternic.com/domain/dreampal.com" target="_blank">
+            Buy Now on Afternic
+        </a>
+        <p class="note">
+            Secure transaction handled via Afternic (GoDaddy network) — safe payment and transfer guaranteed.
+        </p>
+    </div>
+</body>
+</html>
+
