--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>dreampal.com – AI Companion Platform</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9563749884177884"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
