--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,10 @@
 
       <button type="submit">Send Message</button>
     </form>
-    <div class="note">We’ll get back to you as soon as possible.</div>
+    <div class="note">We’ll get back to you as soon as possible.
+      <br>
+<a href="index.html">← Back to Home</a></div>
+
   </div>
 </body>
 </html>
