--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
   </main>
   <footer>
-    © 2025 dreampal.com – Premium Domain Listing
+    © dreampal.com – Premium Domain Listing
   </footer>
 </body>
 </html>
