--- a/contact2.html
+++ b/contact2.html
@@ -1,108 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Seller – dreampal.com</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dreampal.com – Contact Seller</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9fbfd;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      color: #111827;
-}
-header {
-      background: #0d47a1;
-      color: #fff;
-      text-align: center;
-      padding: 2rem 1rem;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-    header p {
-      margin: 0.5rem 0 0;
-      font-size: 1.2rem;
-    }
-    nav {
-      background: #1565c0;
-      text-align: center;
-      padding: 0.8rem;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 1rem;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    .container {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 0.75rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 480px;
-    }
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-      color: #2563eb;
-      text-align: center;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 0.8rem;
-      border: 1px solid #d1d5db;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-    }
-    textarea {
-      resize: vertical;
-      min-height: 120px;
-    }
-    button {
-      background: #2563eb;
-      color: white;
-      padding: 0.9rem;
-      border: none;
-      border-radius: 0.5rem;
-      font-size: 1.1rem;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    button:hover {
-      background: #1e40af;
-    }
-    .note {
-      font-size: 0.85rem;
-      color: #6b7280;
-      text-align: center;
-      margin-top: 1rem;
-    }
+    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f9fafc; color:#333; }
+    header { background:#0d47a1; color:#fff; text-align:center; padding:2rem 1rem; }
+    header h1 { margin:0; font-size:2rem; }
+    nav { background:#1565c0; text-align:center; padding:0.8rem; }
+    nav a { color:#fff; text-decoration:none; margin:0 1rem; font-weight:bold; }
+    nav a:hover { text-decoration:underline; }
+    main { max-width:700px; margin:2rem auto; padding:0 1rem; }
+    form { display:flex; flex-direction:column; gap:1rem; }
+    input, textarea { padding:0.75rem; font-size:1rem; width:100%; border:1px solid #ccc; border-radius:5px; }
+    button { padding:0.75rem; background:#0d47a1; color:#fff; font-size:1.1rem; border:none; border-radius:5px; cursor:pointer; }
+    button:hover { background:#1565c0; }
   </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9563749884177884"
-     crossorigin="anonymous"></script>
-
 </head>
 <body>
-<header>
-    <h1>Dreampal.com</h1>
-    <p>Premium Domain for AI Companions & Digital Connection</p>
+  <header>
+    <h1>Contact the Seller</h1>
   </header>
 
   <nav>
@@ -112,23 +30,25 @@ header {
     <a href="contact.html">Contact Seller</a>
   </nav>
 
-  <div class="container">
-    <h1>Contact the Seller</h1>
-    <form action="https://api.web3forms.com/submit" method="POST">
-      <!-- Replace with your Access Key -->
-      <input type="hidden" name="access_key" value="dd94c511-89fc-445b-9dd5-4372721e9a9b">
+  <main>
+    <h2>Inquire About Dreampal.com</h2>
+    <p>Please use the form below to submit your inquiry:</p>
 
-      <!-- Form Inputs -->
+    <form action="https://api.web3forms.com/submit" method="POST">
+      <input type="hidden" name="access_key" value="dd94c511-89fc-445b-9dd5-4372721e9a9b">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message" required></textarea>
+      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
 
       <!-- Honeypot Spam Protection -->
-      <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+      <input type="checkbox" name="botcheck" class="hidden" style="display:none;">
 
-      <button type="submit">Send Message</button>
+      <button type="submit">Submit Form</button>
     </form>
-    <div class="note">We’ll get back to you as soon as possible.</div>
-  </div>
+  </main>
 </body>
 </html>
+
+
+
+  
