--- a/ai2.html
+++ b/ai2.html
@@ -12,7 +12,16 @@
     nav a { color:#fff; text-decoration:none; margin:0 1rem; font-weight:bold; }
     nav a:hover { text-decoration:underline; }
     main { max-width:900px; margin:2rem auto; padding:0 1rem; }
-    h2 { color:#0d47a1; }
+h2 { color:#0d47a1; }
+
+footer {
+      background: #f3f4f6;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #6b7280;
+    }
+
   </style>
 </head>
 <body>
@@ -71,6 +80,10 @@
 
     <a href="contact.html" class="button">Inquire About Dreampal.com</a>
   </main>
+<footer>
+    © dreampal.com – Premium Domain Listing
+  </footer>
+
 </body>
 </html>
 
