--- a/sales2.html
+++ b/sales2.html
@@ -16,6 +16,26 @@
     table { width:100%; border-collapse:collapse; margin-top:1.5rem; }
     th, td { padding:0.75rem; border-bottom:1px solid #ccc; text-align:left; }
 th { background:#e3f2fd; color:#0d47a1; }
+.note {
+      background: #fff3cd;
+      border-left: 5px solid #ff9800;
+      padding: 1rem;
+      margin: 1.5rem 0;
+    }
+a.button {
+      display: inline-block;
+      margin-top: 2rem;
+      padding: 0.8rem 1.2rem;
+      background: #4a148c;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+    a.button:hover {
+      background: #6a1b9a;
+    }
+
 footer {
       background: #f3f4f6;
       text-align: center;
@@ -28,7 +48,9 @@ footer {
 </head>
 <body>
   <header>
-    <h1>Comparable AI / Companion Domain Sales</h1>
+    <h1>Comparable AI & Companion Domain Sales</h1>
+    <p>Why $198,000 for Dreampal.com is a smart investment</p>
+
   </header>
 
   <nav>
@@ -39,8 +61,8 @@ footer {
   </nav>
 
   <main>
-    <h2>Benchmarking Dreampal.com</h2>
-    <p>Here are recent AI and companion-related domain sales, showing the market value in this fast-growing space:</p>
+    <h2>Recent Premium Sales</h2>
+    <p>The market for AI and companion-related domains is booming, with investors and startups paying six and seven figures for brandable names. Here are some recent examples:</p>
 
     <table>
       <tr><th>Domain</th><th>Sale Price</th><th>Year</th></tr>
@@ -52,9 +74,11 @@ footer {
       <tr><td>You.ai</td><td>$700,000</td><td>2024</td></tr>
       <tr><td>Fin.ai</td><td>$1,000,000</td><td>2025</td></tr>
     </table>
-
-    <p><strong>Dreampal.com</strong> stands out as a premium .COM—trusted, emotional, and highly brandable.</p>
-  </main>
+<div class="note">
+      <strong>Note:</strong> These sales demonstrate the growing demand for premium AI domains. With its global appeal and .COM trust factor, <strong>Dreampal.com</strong> stands alongside these names as a premium digital asset.
+    </div>
+<a href="contact.html" class="button">Contact Seller</a>
+      </main>
 <footer>
     © dreampal.com – Premium Domain Listing
   </footer>
