--- a/ai2.html
+++ b/ai2.html
@@ -13,7 +13,19 @@
     nav a:hover { text-decoration:underline; }
     main { max-width:900px; margin:2rem auto; padding:0 1rem; }
 h2 { color:#0d47a1; }
-
+a.button {
+      display: inline-block;
+      margin-top: 2rem;
+      padding: 0.8rem 1.2rem;
+      background: #4a148c;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+    a.button:hover {
+      background: #6a1b9a;
+    }
 footer {
       background: #f3f4f6;
       text-align: center;
