--- a/contact2.html
+++ b/contact2.html
@@ -15,13 +15,22 @@
     form { display:flex; flex-direction:column; gap:1rem; }
     input, textarea { padding:0.75rem; font-size:1rem; width:100%; border:1px solid #ccc; border-radius:5px; }
     button { padding:0.75rem; background:#0d47a1; color:#fff; font-size:1.1rem; border:none; border-radius:5px; cursor:pointer; }
-    button:hover { background:#1565c0; }
+button:hover { background:#1565c0; }
+footer {
+      background: #f3f4f6;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #6b7280;
+    }
+
   </style>
 </head>
 <body>
   <header>
-    <h1>Contact the Seller</h1>
-  </header>
+<h1>Contact the Seller</h1>
+<p>Why Dreampal.com is a premium asset in a booming industry</p>
+</header>
 
   <nav>
     <a href="index.html">Home</a>
@@ -46,8 +55,13 @@
       <button type="submit">Submit Form</button>
     </form>
   </main>
+<footer>
+    © dreampal.com – Premium Domain Listing
+  </footer>
+
 </body>
 </html>
+
 
 
 
