--- a/sales.html
+++ b/sales.html
@@ -5,53 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dreampal.com – Comparable Domain Sales</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background: #f9fafc;
-      color: #333;
-      line-height: 1.6;
-    }
-    header {
-      background: #4a148c;
-      color: #fff;
-      text-align: center;
-      padding: 2rem 1rem;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-    main {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    h2 {
-      color: #4a148c;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 1.5rem 0;
-      background: #fff;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    table th, table td {
-      padding: 1rem;
-      border: 1px solid #ddd;
-      text-align: left;
-    }
-    table th {
-      background: #f0e6f8;
-    }
-    .note {
+    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f9fafc; color:#333; }
+    header { background:#0d47a1; color:#fff; text-align:center; padding:2rem 1rem; }
+    header h1 { margin:0; font-size:2rem; }
+    nav { background:#1565c0; text-align:center; padding:0.8rem; }
+    nav a { color:#fff; text-decoration:none; margin:0 1rem; font-weight:bold; }
+    nav a:hover { text-decoration:underline; }
+    main { max-width:900px; margin:2rem auto; padding:0 1rem; }
+    h2 { color:#0d47a1; }
+    table { width:100%; border-collapse:collapse; margin-top:1.5rem; }
+    th, td { padding:0.75rem; border-bottom:1px solid #ccc; text-align:left; }
+th { background:#e3f2fd; color:#0d47a1; }
+.note {
       background: #fff3cd;
       border-left: 5px solid #ff9800;
       padding: 1rem;
       margin: 1.5rem 0;
     }
-    a.button {
+a.button {
       display: inline-block;
       margin-top: 2rem;
       padding: 0.8rem 1.2rem;
@@ -64,64 +35,54 @@
     a.button:hover {
       background: #6a1b9a;
     }
+
+footer {
+      background: #f3f4f6;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #6b7280;
+    }
+
   </style>
 </head>
 <body>
   <header>
     <h1>Comparable AI & Companion Domain Sales</h1>
     <p>Why $198,000 for Dreampal.com is a smart investment</p>
+
   </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="sales.html">Comparable Sales</a>
+    <a href="ai.html">Why AI Companions?</a>
+    <a href="contact.html">Contact Seller</a>
+  </nav>
+
   <main>
     <h2>Recent Premium Sales</h2>
     <p>The market for AI and companion-related domains is booming, with investors and startups paying six and seven figures for brandable names. Here are some recent examples:</p>
-    <table>
-      <tr>
-        <th>Domain</th>
-        <th>Sale Price</th>
-        <th>Year</th>
-      </tr>
-      <tr>
-        <td>Girlfriend.ai</td>
-        <td>$275,000</td>
-        <td>2024</td>
-      </tr>
-      <tr>
-        <td>Scarlett.ai</td>
-        <td>$60,000</td>
-        <td>2025</td>
-      </tr>
-      <tr>
-        <td>Workers.ai</td>
-        <td>$74,900</td>
-        <td>2025</td>
-      </tr>
-      <tr>
-        <td>Pump.ai</td>
-        <td>$94,900</td>
-        <td>2025</td>
-      </tr>
-      <tr>
-        <td>Tether.ai</td>
-        <td>$100,000</td>
-        <td>2025</td>
-      </tr>
-      <tr>
-        <td>You.ai</td>
-        <td>$700,000</td>
-        <td>2024</td>
-      </tr>
-      <tr>
-        <td>Fin.ai</td>
-        <td>$1,000,000</td>
-        <td>2025</td>
-      </tr>
-    </table>
 
-    <div class="note">
+    <table>
+      <tr><th>Domain</th><th>Sale Price</th><th>Year</th></tr>
+      <tr><td>Girlfriend.ai</td><td>$275,000</td><td>2024</td></tr>
+      <tr><td>Scarlett.ai</td><td>$60,000</td><td>2025</td></tr>
+      <tr><td>Workers.ai</td><td>$74,900</td><td>2025</td></tr>
+      <tr><td>Pump.ai</td><td>$94,900</td><td>2025</td></tr>
+      <tr><td>Tether.ai</td><td>$100,000</td><td>2025</td></tr>
+      <tr><td>You.ai</td><td>$700,000</td><td>2024</td></tr>
+      <tr><td>Fin.ai</td><td>$1,000,000</td><td>2025</td></tr>
+    </table>
+<div class="note">
       <strong>Note:</strong> These sales demonstrate the growing demand for premium AI domains. With its global appeal and .COM trust factor, <strong>Dreampal.com</strong> stands alongside these names as a premium digital asset.
     </div>
+<a href="contact.html" class="button">Contact Seller</a>
+      </main>
+<footer>
+    © dreampal.com – Premium Domain Listing
+  </footer>
 
-    <a href="contact.html" class="button">Contact Seller</a>
-  </main>
 </body>
 </html>
+
