--- a/ai.html
+++ b/ai.html
@@ -3,55 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dreampal.com – The Future of AI Companions</title>
+  <title>Dreampal.com – AI Companion Industry</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background: #f9fafc;
-      color: #333;
-      line-height: 1.6;
-    }
-    header {
-      background: #0d47a1;
-      color: #fff;
-      text-align: center;
-      padding: 2rem 1rem;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-    main {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    h2 {
-      color: #0d47a1;
-    }
-    section {
-      margin-bottom: 2rem;
-    }
-    .highlight {
-      background: #e3f2fd;
-      padding: 1rem;
-      border-left: 5px solid #1976d2;
-      margin: 1.5rem 0;
-    }
-    a.button {
+    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f9fafc; color:#333; }
+    header { background:#0d47a1; color:#fff; text-align:center; padding:2rem 1rem; }
+    header h1 { margin:0; font-size:2rem; }
+    nav { background:#1565c0; text-align:center; padding:0.8rem; }
+    nav a { color:#fff; text-decoration:none; margin:0 1rem; font-weight:bold; }
+    nav a:hover { text-decoration:underline; }
+    main { max-width:900px; margin:2rem auto; padding:0 1rem; }
+h2 { color:#0d47a1; }
+a.button {
       display: inline-block;
       margin-top: 2rem;
       padding: 0.8rem 1.2rem;
-      background: #0d47a1;
+      background: #4a148c;
       color: #fff;
       text-decoration: none;
       border-radius: 5px;
       font-weight: bold;
     }
     a.button:hover {
-      background: #1565c0;
+      background: #6a1b9a;
     }
+footer {
+      background: #f3f4f6;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #6b7280;
+    }
+
   </style>
 </head>
 <body>
@@ -59,6 +41,14 @@
     <h1>The Future of AI Companions</h1>
     <p>Why Dreampal.com is a premium asset in a booming industry</p>
   </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="sales.html">Comparable Sales</a>
+    <a href="ai.html">Why AI Companions?</a>
+    <a href="contact.html">Contact Seller</a>
+  </nav>
+
   <main>
     <section>
       <h2>AI Companions Are Here</h2>
@@ -102,5 +92,12 @@
 
     <a href="contact.html" class="button">Inquire About Dreampal.com</a>
   </main>
+<footer>
+    © dreampal.com – Premium Domain Listing
+  </footer>
+
 </body>
 </html>
+
+
+
