--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@ footer {
 <body>
   <header>
 <h1>Contact the Seller</h1>
-<p>Why Dreampal.com is a premium asset in a booming industry</p>
+<p>Dreampal.com is a premium asset in a booming industry</p>
 </header>
 
   <nav>
