--- a/index4.html
+++ b/index4.html
@@ -73,7 +73,15 @@
     }
     a.button:hover {
       background: #1565c0;
+}
+footer {
+      background: #f3f4f6;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #6b7280;
     }
+
   </style>
 </head>
 <body>
@@ -93,8 +101,11 @@
     <h2>Memorable. Brandable. Trusted.</h2>
     <p>
       The domain <strong>Dreampal.com</strong> is a once-in-a-lifetime opportunity for startups, investors, 
-      and innovators in the AI companion industry. Like PayPal.com, it is short, emotional, and 
-      instantly brandable—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
+      and innovators in the AI companion industry. Like <strong>PayPal.com</strong>, it is short, emotional, and 
+      instantly brandable.  It evokes warmth and 
+      connection – combining <em>dream</em> (aspiration, imagination) with 
+      <em>pal</em> (friend, companion).
+—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
     </p>
 
     <div class="price-box">
@@ -109,5 +120,10 @@
 
     <a href="contact.html" class="button">Inquire About Dreampal.com</a>
   </main>
+<footer>
+    © dreampal.com – Premium Domain Listing
+  </footer>
+
 </body>
 </html>
+
