--- a/index.html
+++ b/index.html
@@ -101,8 +101,11 @@ footer {
     <h2>Memorable. Brandable. Trusted.</h2>
     <p>
       The domain <strong>Dreampal.com</strong> is a once-in-a-lifetime opportunity for startups, investors, 
-      and innovators in the AI companion industry. Like PayPal.com, it is short, emotional, and 
-      instantly brandable—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
+      and innovators in the AI companion industry. Like <strong>PayPal.com</strong>, it is short, emotional, and 
+      instantly brandable.  It evokes warmth and 
+      connection – combining <em>dream</em> (aspiration, imagination) with 
+      <em>pal</em> (friend, companion).
+—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
     </p>
 
     <div class="price-box">
@@ -123,3 +126,4 @@ footer {
 
 </body>
 </html>
+
