--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@ footer {
       and innovators in the AI companion industry. Like <strong>PayPal.com</strong>, it is short, emotional, and 
       instantly brandable.  It evokes warmth and 
       connection – combining <em>dream</em> (aspiration, imagination) with 
-      <em>pal</em> (friend, companion).
-—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
+      <em>pal</em> (friend, companion)—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
     </p>
 
     <div class="price-box">
