--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ footer {
       The domain <strong>Dreampal.com</strong> is a once-in-a-lifetime opportunity for startups, investors, 
       and innovators in the AI companion industry. Like <strong>PayPal.com</strong>, it is short, emotional, and 
       instantly brandable.  It evokes warmth and 
-      connection – combining <em>dream</em> (aspiration, imagination) with 
-      <em>pal</em> (friend, companion)—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
+      connection – combining<strong> <em>dream</em></strong> (aspiration, imagination) with 
+      <strong><em>pal</em></strong> (friend, companion)—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
     </p>
 
     <div class="price-box">
@@ -125,4 +125,5 @@ footer {
 
 </body>
 </html>
+
 
