--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ footer {
 
     <p>
       With AI companions attracting millions of users worldwide, the right domain name is a 
-      <strong>competitive advantage</strong>. Dreampal.com offers both <strong>trust (as a .COM)</strong> 
+      <strong>competitive advantage</strong>. <strong>Dreampal.com</strong> offers both <strong>trust (as a .COM)</strong> 
       and <strong>emotional resonance</strong> that makes it stand out.
     </p>
 
@@ -125,5 +125,6 @@ footer {
 
 </body>
 </html>
+
 
 
