--- a/sales3.html
+++ b/sales3.html
@@ -3,85 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comparable Domain Sales - Dreampal.com</title>
+  <title>Dreampal.com – Comparable Domain Sales</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9fafc;
-      color: #333;
-    }
-    header {
-      background: #1e293b;
+    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f9fafc; color:#333; }
+    header { background:#0d47a1; color:#fff; text-align:center; padding:2rem 1rem; }
+    header h1 { margin:0; font-size:2rem; }
+    nav { background:#1565c0; text-align:center; padding:0.8rem; }
+    nav a { color:#fff; text-decoration:none; margin:0 1rem; font-weight:bold; }
+    nav a:hover { text-decoration:underline; }
+    main { max-width:900px; margin:2rem auto; padding:0 1rem; }
+    h2 { color:#0d47a1; }
+    table { width:100%; border-collapse:collapse; margin-top:1.5rem; }
+    th, td { padding:0.75rem; border-bottom:1px solid #ccc; text-align:left; }
+th { background:#e3f2fd; color:#0d47a1; }
+.note {
+      background: #fff3cd;
+      border-left: 5px solid #ff9800;
       padding: 1rem;
-      text-align: center;
+      margin: 1.5rem 0;
     }
-    header h1 {
-      color: #fff;
-      margin: 0;
-    }
-    nav {
-      background: #334155;
-      display: flex;
-      justify-content: center;
-      padding: 0.5rem;
-    }
-    nav a {
+a.button {
+      display: inline-block;
+      margin-top: 2rem;
+      padding: 0.8rem 1.2rem;
+      background: #4a148c;
       color: #fff;
       text-decoration: none;
-      margin: 0 1rem;
+      border-radius: 5px;
       font-weight: bold;
     }
-    nav a:hover {
-      text-decoration: underline;
+    a.button:hover {
+      background: #6a1b9a;
     }
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
+
+footer {
+      background: #f3f4f6;
+      text-align: center;
       padding: 1rem;
-    }
-    h2 {
-      color: #1e293b;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 1.5rem 0;
-      background: #fff;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 0.75rem;
-      text-align: left;
-    }
-    th {
-      background: #e2e8f0;
-      font-weight: bold;
-    }
-    .note {
       font-size: 0.9rem;
-      color: #555;
-      margin-top: 1rem;
+      color: #6b7280;
     }
+
   </style>
 </head>
 <body>
+  <header>
+    <h1>Comparable AI & Companion Domain Sales</h1>
+    <p>Why $198,000 for Dreampal.com is a smart investment</p>
 
-<header>
-  <h1>Comparable Domain Sales</h1>
-</header>
+  </header>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="sales.html">Comparable Sales</a>
-  <a href="ai.html">AI Opportunity</a>
-  <a href="contact.html">Contact</a>
-</nav>
-
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="sales.html">Comparable Sales</a>
+    <a href="ai.html">Why AI Companions?</a>
+    <a href="contact.html">Contact Seller</a>
+  </nav>
 <main>
-  <h2>Why $198,000 is a Fair Price for Dreampal.com</h2>
+
+<h2>Why $198,000 is a Fair Price for Dreampal.com</h2>
   <p>
     The AI and digital companion market is booming, with domain names selling for six and even seven figures. 
     Dreampal.com is short, memorable, emotionally resonant, and uses the globally dominant <strong>.com</strong> extension.
@@ -137,7 +117,16 @@
     Dreampal.com’s asking price of <strong>$198,000</strong> is strategically positioned for 
     visionary companies building the next generation of AI companions.
   </p>
-</main>
+
+<div class="note">
+      <strong>Note:</strong> These sales demonstrate the growing demand for premium AI domains. With its global appeal and .COM trust factor, <strong>Dreampal.com</strong> stands alongside these names as a premium digital asset.
+    </div>
+<a href="contact.html" class="button">Contact Seller</a>
+      </main>
+<footer>
+    © dreampal.com – Premium Domain Listing
+  </footer>
 
 </body>
 </html>
+
