--- a/sales.html
+++ b/sales.html
@@ -59,24 +59,65 @@ footer {
     <a href="ai.html">Why AI Companions?</a>
     <a href="contact.html">Contact Seller</a>
   </nav>
+<main>
 
-  <main>
-    <h2>Recent Premium Sales</h2>
-    <p>The market for AI and companion-related domains is booming, with investors and startups paying six and seven figures for brandable names. Here are some recent examples:</p>
+<h2>Why $198,000 is a Fair Price for Dreampal.com</h2>
+  <p>
+    The AI and digital companion market is booming, with domain names selling for six and even seven figures. 
+    <strong>Dreampal.com</strong> is short, memorable, emotionally resonant, and uses the globally dominant <strong>.com</strong> extension.
+  </p>
 
-    <table>
-      <tr><th>Domain</th><th>Sale Price</th><th>Year</th></tr>
-      <tr><td>Girlfriend.ai</td><td>$275,000</td><td>2024</td></tr>
-      <tr><td>Scarlett.ai</td><td>$60,000</td><td>2025</td></tr>
-      <tr><td>Workers.ai</td><td>$74,900</td><td>2025</td></tr>
-      <tr><td>Pump.ai</td><td>$94,900</td><td>2025</td></tr>
-      <tr><td>Tether.ai</td><td>$100,000</td><td>2025</td></tr>
-      <tr><td>You.ai</td><td>$700,000</td><td>2024</td></tr>
-      <tr><td>Fin.ai</td><td>$1,000,000</td><td>2025</td></tr>
-    </table>
-<div class="note">
-      <strong>Note:</strong> These sales demonstrate the growing demand for premium AI domains. With its global appeal and .COM trust factor, <strong>Dreampal.com</strong> stands alongside these names as a premium digital asset.
-    </div>
+  <h2>Recent Comparable AI / Companion Domain Sales</h2>
+  <table>
+    <tr>
+      <th>Domain</th>
+      <th>Sale Price</th>
+      <th>Year</th>
+    </tr>
+    <tr><td>Girlfriend.ai</td><td>$275,000</td><td>2024</td></tr>
+    <tr><td>Scarlett.ai</td><td>$60,000</td><td>2025</td></tr>
+    <tr><td>Workers.ai</td><td>$74,900</td><td>2025</td></tr>
+    <tr><td>Pump.ai</td><td>$94,900</td><td>2025</td></tr>
+    <tr><td>Tether.ai</td><td>$100,000</td><td>2025</td></tr>
+    <tr><td>You.ai</td><td>$700,000</td><td>2024</td></tr>
+    <tr><td>Fin.ai</td><td>$1,000,000</td><td>2025</td></tr>
+  </table>
+
+  <h2>Expanded AI Domain Sales Benchmarking</h2>
+  <table>
+    <tr>
+      <th>Domain</th>
+      <th>Sale Price</th>
+      <th>Year</th>
+    </tr>
+    <tr><td>Home.ai</td><td>$800,000</td><td>2025</td></tr>
+    <tr><td>Cloud.ai</td><td>$600,000</td><td>2025</td></tr>
+    <tr><td>Qwen.ai</td><td>$500,000</td><td>2025</td></tr>
+    <tr><td>Sound.ai</td><td>$250,000</td><td>2024</td></tr>
+    <tr><td>Fantasy.ai</td><td>$120,000</td><td>2024</td></tr>
+    <tr><td>Vision.ai</td><td>$100,000</td><td>2024</td></tr>
+    <tr><td>Stack.ai</td><td>$73,000</td><td>2024</td></tr>
+  </table>
+
+  <h2>Top .COM Domain Benchmarks</h2>
+  <table>
+    <tr>
+      <th>Domain</th>
+      <th>Sale Price</th>
+      <th>Buyer</th>
+      <th>Year</th>
+    </tr>
+    <tr><td>Chat.com</td><td>$15,000,000+</td><td>OpenAI</td><td>2024</td></tr>
+    <tr><td>Voice.com</td><td>$30,000,000</td><td>MicroStrategy</td><td>2019</td></tr>
+    <tr><td>Help.com</td><td>$3,000,000</td><td>Undisclosed</td><td>2015</td></tr>
+  </table>
+
+  <p class="note">
+    With both <strong>.ai</strong> and <strong>.com</strong> domains commanding premium prices, 
+    <strong>Dreampal.com’s</strong> asking price of <strong>$198,000</strong> is strategically positioned for 
+    visionary companies building the next generation of AI companions.
+  </p>
+
 <a href="contact.html" class="button">Contact Seller</a>
       </main>
 <footer>
