--- a/index.html
+++ b/index.html
@@ -26,20 +26,58 @@
       margin: 0.5rem 0 0;
       font-size: 1.2rem;
     }
-    nav {
-      background: #1565c0;
-      text-align: center;
-      padding: 0.8rem;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 1rem;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
+    /* Navigation */
+nav {
+  background: #334155;
+}
+.nav-links {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.nav-links li {
+  margin: 0 1rem;
+}
+.nav-links a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+.nav-links a:hover {
+  text-decoration: underline;
+}
+
+/* Mobile menu */
+.menu-toggle {
+  display: none;
+  background: #334155;
+  color: #fff;
+  border: none;
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    background: #334155;
+    text-align: center;
+  }
+  .nav-links li {
+    margin: 1rem 0;
+  }
+  .menu-toggle {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+  .nav-links.active {
+    display: flex;
+  }
+}
     main {
       max-width: 900px;
       margin: 2rem auto;
@@ -91,11 +129,15 @@ footer {
   </header>
 
   <nav>
-    <a href="index.html">Home</a>
-    <a href="sales.html">Comparable Sales</a>
-    <a href="ai.html">Why AI Companions?</a>
-    <a href="contact.html">Contact Seller</a>
-  </nav>
+  <button class="menu-toggle">☰ Menu</button>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="sales.html">Comparable Sales</a></li>
+    <li><a href="ai.html">AI Opportunity</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
 
   <main>
     <h2>Memorable. Brandable. Trusted.</h2>
@@ -122,7 +164,14 @@ footer {
 <footer>
     © dreampal.com – Premium Domain Listing
   </footer>
+<script>
+  const toggle = document.querySelector(".menu-toggle");
+  const links = document.querySelector(".nav-links");
 
+  toggle.addEventListener("click", () => {
+    links.classList.toggle("active");
+  });
+</script>
 </body>
 </html>
 
