--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@ nav {
       margin: 2rem auto;
       padding: 0 1rem;
       text-align: center;
-    }
+}
+.left-text {
+  text-align: left;
+  max-width: 800px;   /* keeps line length readable */
+  margin: 0 auto;     /* centers the block on the page */
+}
     h2 {
       color: #0d47a1;
     }
@@ -141,22 +146,27 @@ footer {
 
   <main>
     <h2>Memorable. Brandable. Trusted.</h2>
-    <p>
+<p>
+<section class="left-text">
       The domain <strong>Dreampal.com</strong> is a once-in-a-lifetime opportunity for startups, investors, 
       and innovators in the AI companion industry. Like <strong>PayPal.com</strong>, it is short, emotional, and 
       instantly brandable.  It evokes warmth and 
       connection – combining<strong> <em>dream</em></strong> (aspiration, imagination) with 
       <strong><em>pal</em></strong> (friend, companion)—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
     </p>
-
+</section>
     <div class="price-box">
       Asking Price: $198,000
     </div>
 
-    <p>
+<p>
+<section class="left-text">
+
       With AI companions attracting millions of users worldwide, the right domain name is a 
       <strong>competitive advantage</strong>. <strong>Dreampal.com</strong> offers both <strong>trust (as a .COM)</strong> 
       and <strong>emotional resonance</strong> that makes it stand out.
+</section>
+
     </p>
 
     <a href="contact.html" class="button">Inquire About Dreampal.com</a>
@@ -174,6 +184,7 @@ footer {
 </script>
 </body>
 </html>
+
 
 
 
