--- a/index.html
+++ b/index.html
@@ -26,19 +26,6 @@
       margin: 0.5rem 0 0;
       font-size: 1.2rem;
 }
-/* Default desktop view */
-header {
-  text-align: center;
-  padding: 2rem;
-}
-
-/* Mobile fix: align header text left */
-@media (max-width: 768px) {
-  header {
-    text-align: left;
-    padding: 1rem;
-  }
-}
 
     /* Navigation */
 nav {
@@ -138,7 +125,12 @@ footer {
       font-size: 0.9rem;
       color: #6b7280;
     }
-
+/* Mobile fix: align header paragraphs left */
+    @media (max-width: 768px) {
+      header p {
+        text-align: left;
+      }
+    }
   </style>
 </head>
 <body>
@@ -198,6 +190,7 @@ footer {
 </script>
 </body>
 </html>
+
 
 
 
