--- a/index.html
+++ b/index.html
@@ -125,12 +125,13 @@ footer {
       font-size: 0.9rem;
       color: #6b7280;
     }
-/* Mobile fix: align header paragraphs left */
-    @media (max-width: 768px) {
-      header p {
-        text-align: left;
-      }
+/* Mobile fix: align header paragraphs and section headings left */
+  @media (max-width: 768px) {
+    header p,
+    section h2 {
+      text-align: left;
     }
+  }
   </style>
 </head>
 <body>
@@ -190,6 +191,7 @@ footer {
 </script>
 </body>
 </html>
+
 
 
 
