--- a/index.html
+++ b/index.html
@@ -125,13 +125,14 @@ footer {
       font-size: 0.9rem;
       color: #6b7280;
     }
-/* Mobile fix: align header paragraphs and section headings left */
-  @media (max-width: 768px) {
-    header p,
-    section h2 {
-      text-align: left;
+/* Mobile fix: align text left on small screens */
+    @media (max-width: 768px) {
+      header p,
+      section h2 {
+        text-align: left;
+      }
     }
-  }
+
   </style>
 </head>
 <body>
@@ -191,6 +192,7 @@ footer {
 </script>
 </body>
 </html>
+
 
 
 
