--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ footer {
 /* Mobile fix: align text left on small screens */
     @media (max-width: 768px) {
       header p,
-      section h2 {
+      main h2 {
         text-align: left;
       }
     }
@@ -192,6 +192,7 @@ footer {
 </script>
 </body>
 </html>
+
 
 
 
