--- a/sales.html
+++ b/sales.html
@@ -95,7 +95,14 @@ footer {
       font-size: 0.9rem;
       color: #6b7280;
     }
-
+/* Mobile: align left when screen width is less than 768px */
+ @media (max-width: 768px) {
+    header h1,
+    header p {
+      text-align: left;
+      padding-left: 10px; /* optional: add some spacing from screen edge */
+    }
+ }
   </style>
 </head>
 <body>
@@ -165,7 +172,8 @@ footer {
     </tr>
     <tr><td>Chat.com</td><td>$15,000,000+</td><td>OpenAI</td><td>2024</td></tr>
     <tr><td>Voice.com</td><td>$30,000,000</td><td>MicroStrategy</td><td>2019</td></tr>
-    <tr><td>Help.com</td><td>$3,000,000</td><td>Undisclosed</td><td>2015</td></tr>
+<tr><td>Help.com</td><td>$3,000,000</td><td>Undisclosed</td><td>2015</td></tr>
+<tr><td>Dreaming.com</td><td>$95,000</td><td>Undisclosed</td><td>2025</td></tr>
   </table>
 
   <p class="note">
@@ -190,5 +198,6 @@ footer {
 
 </body>
 </html>
+
 
 
