--- a/sales.html
+++ b/sales.html
@@ -104,6 +104,9 @@ footer {
     }
  }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9563749884177884"
+     crossorigin="anonymous"></script>
+
 </head>
 <body>
   <header>
