--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ footer {
         text-align: left;
       }
 .	nav-links {
-        justify-content: flex-start;
+        text-align: left;
         padding-left: 10px;
       }
     }
@@ -203,6 +203,7 @@ footer {
 </script>
 </body>
 </html>
+
 
 
 
