--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ footer {
       section h2 {
         text-align: left;
       }
-.	nav-links {
-        text-align: left;
+.	.nav-links {
+        justify-content: flex-start;
         padding-left: 10px;
       }
     }
@@ -203,6 +203,7 @@ footer {
 </script>
 </body>
 </html>
+
 
 
 
