--- a/contact5.html
+++ b/contact5.html
@@ -12,7 +12,7 @@ header h1 { margin:0; font-size:2rem; }
 
   /* Desktop Navigation */
         .desktop-nav ul {
-            display: flex;
+            display: center;
             list-style: none;
         }
         
@@ -142,7 +142,7 @@ footer {
                 
                 <!-- Mobile Navigation Toggle -->
                 <button class="mobile-nav-toggle">
-                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-bars">Menu</i>
                 </button>
 <!-- Mobile Navigation -->
         <nav class="mobile-nav">
@@ -182,4 +182,5 @@ footer {
     </script>
 </body>
 </html>
+
 
