--- a/contact5.html
+++ b/contact5.html
@@ -12,7 +12,8 @@ header h1 { margin:0; font-size:2rem; }
 
   /* Desktop Navigation */
         .desktop-nav ul {
-            display: center;
+            display: flex;
+text-align: center;
             list-style: none;
         }
         
@@ -182,5 +183,6 @@ footer {
     </script>
 </body>
 </html>
+
 
 
