--- a/contact5.html
+++ b/contact5.html
@@ -10,10 +10,15 @@
     header { background:#0d47a1; color:#fff; text-align:center; padding:2rem 1rem; }
 header h1 { margin:0; font-size:2rem; }
 
+section {
+       background: #334155;
+}
+
+
   /* Desktop Navigation */
         .desktop-nav ul {
             display: flex;
-text-align: center;
+justify-content: center;
             list-style: none;
         }
         
@@ -131,6 +136,7 @@ footer {
 <p>Dreampal.com is a premium asset in a booming industry</p>
 </header>
 
+<section>
   <!-- Desktop Navigation -->
                 <nav class="desktop-nav">
                     <ul>
@@ -155,7 +161,7 @@ footer {
 
             </ul>
         </nav>
-
+</section>
   <main>
     <h2>Inquire About Dreampal.com</h2>
     <p>Please use the form below to submit your inquiry:</p>
@@ -183,6 +189,7 @@ footer {
     </script>
 </body>
 </html>
+
 
 
 
