--- a/contact5.html
+++ b/contact5.html
@@ -144,9 +144,7 @@ footer {
                 </nav>
                 
                 <!-- Mobile Navigation Toggle -->
-                <button class="mobile-nav-toggle">
-                    <i class="fas fa-bars">Menu</i>
-                </button>
+                <button class="mobile-nav-toggle">☰ Menu</button>
 <!-- Mobile Navigation -->
         <nav class="mobile-nav">
             <ul>
@@ -184,6 +182,7 @@ footer {
     </script>
 </body>
 </html>
+
 
 
 
