--- a/contact5.html
+++ b/contact5.html
@@ -40,7 +40,7 @@ justify-content: center;
             border: none;
             font-size: 24px;
             cursor: pointer;
-            color: #6e8efb;
+            color: #000000;
         }
         
         .mobile-nav {
@@ -181,6 +181,7 @@ footer {
     </script>
 </body>
 </html>
+
 
 
 
