--- a/index8.html
+++ b/index8.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -208,7 +207,8 @@ footer {
             </ul>
         </nav>
 
-  <section>
+<main >
+  
     <h2>Memorable. Brandable. Trusted.</h2>
 <p>
 <section class="left-text">
@@ -235,7 +235,8 @@ footer {
     </p>
 
     <a href="contact.html" class="button">Inquire About Dreampal.com</a>
-  </section>
+</main >
+
 <footer>
     © dreampal.com – Premium Domain Listing
   </footer>
@@ -247,3 +248,4 @@ footer {
     </script>
 </body>
 </html>
+
