--- a/index8.html
+++ b/index8.html
@@ -207,7 +207,7 @@ footer {
             </ul>
         </nav>
 
-  
+   <main>
     <h2>Memorable. Brandable. Trusted.</h2>
 <p>
 <section class="left-text">
@@ -234,7 +234,7 @@ footer {
     </p>
 
     <a href="contact.html" class="button">Inquire About Dreampal.com</a>
-
+</main>
 <footer>
     © dreampal.com – Premium Domain Listing
   </footer>
@@ -246,3 +246,4 @@ footer {
     </script>
 </body>
 </html>
+
