--- a/index8.html
+++ b/index8.html
@@ -91,12 +91,8 @@ justify-content: center;
             color: #6e8efb;
         }
 
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-      text-align: center;
-}
+    main { max-width:900px; margin:2rem auto; padding:0 1rem; }
+
 section {
       padding: 2rem;
       max-width: 900px;
@@ -120,6 +116,8 @@ section {
       font-weight: bold;
       color: #0d47a1;
       border-radius: 10px;
+justify-content: center;
+
     }
     a.button {
       display: inline-block;
@@ -246,4 +244,5 @@ footer {
     </script>
 </body>
 </html>
+
 
