--- a/index8.html
+++ b/index8.html
@@ -116,7 +116,6 @@ section {
       font-weight: bold;
       color: #0d47a1;
       border-radius: 10px;
-justify-content: center;
 
     }
     a.button {
@@ -216,10 +215,12 @@ footer {
       <strong><em>pal</em></strong> (friend, companion)—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
     </p>
 </section>
+<center>
     <div class="price-box">
       Asking Price: $198,000
 <br>OBO
     </div>
+</center>
 
 <p>
 <section class="left-text">
@@ -230,8 +231,11 @@ footer {
 </section>
 
     </p>
+<center>
 
-    <a href="contact.html" class="button">Inquire About Dreampal.com</a>
+<a href="contact.html" class="button">Inquire About Dreampal.com</a>
+</center>
+
 </main>
 <footer>
     © dreampal.com – Premium Domain Listing
@@ -244,5 +248,6 @@ footer {
     </script>
 </body>
 </html>
+
 
 
