--- a/index.html
+++ b/index.html
@@ -4,100 +4,140 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dreampal.com – Premium Domain for Sale</title>
+
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
+      margin: 0; 
+      padding: 0;
       background: #f9fafc;
       color: #333;
       line-height: 1.6;
     }
+
     header {
       background: #0d47a1;
       color: #fff;
       text-align: center;
       padding: 2rem 1rem;
     }
+
     header h1 {
       margin: 0;
       font-size: 2.5rem;
     }
+
     header p {
       margin: 0.5rem 0 0;
       font-size: 1.2rem;
-}
+    }
 
-    /* Navigation */
-nav {
-  background: #334155;
-}
-.nav-links {
-  display: flex;
-  justify-content: center;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.nav-links li {
-  margin: 0 1rem;
-}
-.nav-links a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-}
-.nav-links a:hover {
-  text-decoration: underline;
-}
+    /* Desktop Navigation */
+    .desktop-nav ul {
+      display: flex;
+      justify-content: center;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
 
-/* Mobile menu */
-.menu-toggle {
-  display: none;
-  background: #334155;
-  color: #fff;
-  border: none;
-  font-size: 1.5rem;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-}
-@media (max-width: 768px) {
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    background: #334155;
-    text-align: center;
-  }
-  .nav-links li {
-    margin: 1rem 0;
-  }
-  .menu-toggle {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-  .nav-links.active {
-    display: flex;
-  }
-}
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-      text-align: center;
-}
-section {
+    .desktop-nav li {
+      margin-left: 25px;
+    }
+
+    .desktop-nav a {
+      text-decoration: none;
+      color: #555;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    .desktop-nav a:hover {
+      color: #6e8efb;
+    }
+
+    /* Mobile Navigation Toggle */
+    .mobile-nav-toggle {
+      display: none;
+      background: none;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+      color: #000000;
+      margin: 10px;
+    }
+
+    /* Mobile Navigation */
+    .mobile-nav {
+      display: none;
+      background: rgba(255, 255, 255, 0.98);
+      position: fixed;
+      top: 70px;
+      left: 0;
+      right: 0;
+      padding: 20px;
+      box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+      z-index: 9999;
+    }
+
+    .mobile-nav ul {
+      list-style: none;
+      padding-left: 20px;
+      margin: 0;
+    }
+
+    .mobile-nav li {
+      margin-bottom: 15px;
+    }
+
+    .mobile-nav a {
+      text-decoration: none;
+      color: #555;
+      font-weight: 500;
+      display: block;
+      padding: 8px 0;
+      transition: color 0.3s;
+    }
+
+    .mobile-nav a:hover {
+      color: #6e8efb;
+    }
+
+    /* Mobile close button */
+    .mobile-nav-close {
+      display: none;
+      background: none;
+      border: none;
+      font-size: 22px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #000;
+      margin-left: auto;
+      margin-bottom: 15px;
+    }
+
+    main { 
+      max-width: 900px; 
+      margin: 2rem auto; 
+      padding: 0 1rem; 
+    }
+
+    section {
       padding: 2rem;
       max-width: 900px;
       margin: auto;
     }
-.left-text {
-  text-align: left;
-  max-width: 800px;   /* keeps line length readable */
-  margin: 0 auto;     /* centers the block on the page */
-}
+
+    .left-text {
+      text-align: left;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
     h2 {
       color: #0d47a1;
     }
+
     .price-box {
       background: #e3f2fd;
       padding: 1.5rem;
@@ -109,6 +149,7 @@ section {
       color: #0d47a1;
       border-radius: 10px;
     }
+
     a.button {
       display: inline-block;
       margin-top: 2rem;
@@ -120,29 +161,45 @@ section {
       font-weight: bold;
       font-size: 1.1rem;
     }
+
     a.button:hover {
       background: #1565c0;
-}
-footer {
+    }
+
+    footer {
       background: #f3f4f6;
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
       color: #6b7280;
     }
-/* Mobile fix: align text left on small screens */
+
+    /* Responsive Styles */
     @media (max-width: 768px) {
-      header p,
-      section h2 {
+      header h1, header p, section h2 {
         text-align: left;
       }
-.	.nav-links {
-        justify-content: flex-start;
-        padding-left: 10px;
+
+      .desktop-nav {
+        display: none;
+      }
+
+      .mobile-nav-toggle {
+        display: block;
+      }
+
+      .mobile-nav.active {
+        display: block;
+      }
+
+      /* Show close button in mobile menu */
+      .mobile-nav-close {
+        display: block;
       }
     }
   </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9563749884177884"
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9563749884177884"
      crossorigin="anonymous"></script>
 </head>
 <body>
@@ -151,58 +208,85 @@ footer {
     <p>Premium Domain for AI Companions & Digital Connection</p>
   </header>
 
-  <nav>
-  <button class="menu-toggle">☰ Menu</button>
-  <ul class="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="sales.html">Comparable Sales</a></li>
-    <li><a href="ai.html">AI Opportunity</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+  <!-- Desktop Navigation -->
+  <nav class="desktop-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="sales.html">Comparable Sales</a></li>
+      <li><a href="ai.html">AI Opportunity</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
+  <!-- Mobile Navigation Toggle -->
+  <button class="mobile-nav-toggle">☰ Menu</button>
 
-  <section>
+  <!-- Mobile Navigation -->
+  <nav class="mobile-nav">
+    <button class="mobile-nav-close">✕ Close</button>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="sales.html">Comparable Sales</a></li>
+      <li><a href="ai.html">AI Opportunity</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
     <h2>Memorable. Brandable. Trusted.</h2>
-<p>
-<section class="left-text">
+    <p>
       The domain <strong>Dreampal.com</strong> is a once-in-a-lifetime opportunity for startups, investors, 
       and innovators in the AI companion industry. Like <strong>PayPal.com</strong>, it is short, emotional, and 
-      instantly brandable.  It evokes warmth and 
-      connection – combining<strong> <em>dream</em></strong> (aspiration, imagination) with 
+      instantly brandable. It evokes warmth and 
+      connection – combining <strong><em>dream</em></strong> (aspiration, imagination) with 
       <strong><em>pal</em></strong> (friend, companion)—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
     </p>
-</section>
-    <div class="price-box">
-      Asking Price: $198,000
-<br>OBO
-    </div>
 
-<p>
-<section class="left-text">
+    <center>
+      <div class="price-box">
+        Asking Price: $198,000 <br> OBO
+      </div>
+    </center>
 
+    <p>
       With AI companions attracting millions of users worldwide, the right domain name is a 
       <strong>competitive advantage</strong>. <strong>Dreampal.com</strong> offers both <strong>trust (as a .COM)</strong> 
       and <strong>emotional resonance</strong> that makes it stand out.
-</section>
-
     </p>
 
-    <a href="contact.html" class="button">Inquire About Dreampal.com</a>
-  </section>
-<footer>
+    <center>
+      <a href="contact.html" class="button">Inquire About Dreampal.com</a>
+    </center>
+  </main>
+
+  <footer>
     © dreampal.com – Premium Domain Listing
   </footer>
-<script>
-  const toggle = document.querySelector(".menu-toggle");
-  const links = document.querySelector(".nav-links");
 
-  toggle.addEventListener("click", () => {
-    links.classList.toggle("active");
-  });
-</script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const menuToggle = document.querySelector(".mobile-nav-toggle");
+      const menuClose  = document.querySelector(".mobile-nav-close");
+      const mobileNav  = document.querySelector(".mobile-nav");
+
+      if (menuToggle && menuClose && mobileNav) {
+        // Open mobile menu
+        menuToggle.addEventListener("click", () => {
+          mobileNav.classList.add("active");
+          menuToggle.style.display = "none"; // hide ☰ when open
+        });
+
+        // Close mobile menu
+        menuClose.addEventListener("click", () => {
+          mobileNav.classList.remove("active");
+          menuToggle.style.display = "block"; // show ☰ again
+        });
+      }
+    });
+  </script>
 </body>
 </html>
+
 
 
 
